<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CalculatorDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="preResult">history</string>
    <string name="currentResult">0</string>
    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_point">.</string>
    <string name="btn_ce">CE</string>
    <string name="btn_c">C</string>
    <string name="btn_back">◁</string>
    <string name="btn_add">＋</string>
    <string name="btn_sub">－</string>
    <string name="btn_mul">×</string>
    <string name="btn_div">÷</string>
    <string name="btn_add_sub">进制转换</string>
    <string name="btn_equal">＝</string>
    <string name="dec2bin">十进制转换为二进制</string>
    <string name="dec2hex">十进制转换为十六进制</string>

</resources>