<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.edu.cqjtu.calculatordemo.MainActivity" >

    <TextView
        android:id="@+id/tv_preResult"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/textview_style"
        android:gravity="fill_vertical|end"
        android:singleLine="true"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/textview_style"
        android:paddingTop="@dimen/activity_horizontal_margin" >

        <TextView
            android:id="@+id/tv_currentResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|end"
            android:singleLine="false"
            android:textSize="40sp"
            android:textStyle="bold" />
    </ScrollView>

    <TableLayout
        android:id="@+id/tbl_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:dividerPadding="0dp"
        android:gravity="bottom"
        android:stretchColumns="0,1,2,3,4" >

        <TableRow
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:padding="0dp" >

            <Button
                android:id="@+id/btn_ce"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_style"
                android:text="@string/btn_ce" />

            <Button
                android:id="@+id/btn_c"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_style"
                android:text="@string/btn_c" />

            <Button
                android:id="@+id/btn_back"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_style"
                android:text="@string/btn_back" />

            <Button
                android:id="@+id/btn_div"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_style"
                android:text="@string/btn_div" />
        </TableRow>

        <TableRow android:layout_weight="1" >

            <Button
                android:id="@+id/btn_7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_style"
                android:text="@string/btn_7"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_style"
                android:text="@string/btn_8"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_style"
                android:text="@string/btn_9"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_mul"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_style"
                android:text="@string/btn_mul" />
        </TableRow>

        <TableRow android:layout_weight="1" >

            <Button
                android:id="@+id/btn_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_style"
                android:text="@string/btn_4"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_style"
                android:text="@string/btn_5"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_style"
                android:text="@string/btn_6"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_sub"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_style"
                android:text="@string/btn_sub" />
        </TableRow>

        <TableRow android:layout_weight="1" >

            <Button
                android:id="@+id/btn_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_style"
                android:text="@string/btn_1"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_style"
                android:text="@string/btn_2"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_style"
                android:text="@string/btn_3"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_style"
                android:text="@string/btn_add" />
        </TableRow>

        <TableRow android:layout_weight="1" >

            <Button
                android:id="@+id/btn_convert"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_style"
                android:gravity="center_vertical|center_horizontal"
                android:scrollHorizontally="false"
                android:text="@string/btn_add_sub" />

            <Button
                android:id="@+id/btn_0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_style"
                android:text="@string/btn_0"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_point"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_style"
                android:text="@string/btn_point" />

            <Button
                android:id="@+id/btn_equal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_style"
                android:text="@string/btn_equal" />
        </TableRow>
    </TableLayout>

</LinearLayout>